# TrulyModernBlockchain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml
.kiro/specs/modern-blockchain/: design.md  requirements.md  tasks.md
.kiro/steering/: nix-build.md
crates/common/: Cargo.toml
crates/common/src/: error.rs  types.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: bls.rs  dkg.rs  leader.rs  lib.rs  mysticeti.rs  timeout.rs
crates/execution/: Cargo.toml
crates/execution/src/: dsl.rs  gas.rs  lib.rs  parallel.rs  wasm.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: consensus.proto  execution.proto  networking.proto
crates/proto/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: file.rs  lib.rs  merkle.rs  store.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs
crates/validator/: Cargo.toml
crates/validator/src/: block_production.rs  main.rs  signature.rs
networking/: .gitignore  mix.exs
networking/config/: config.exs  dev.exs  prod.exs  test.exs
networking/lib/networking/: application.ex  connection_manager.ex  discovery.ex  gossip.ex
project/: ai_chat_discussing_the_new_architecture.md  prev_attempt_summary.md  programming_languages.md
