[workspace]
resolver = "2"
members = [
    "crates/consensus",
    "crates/execution",
    "crates/state",
    "crates/storage",
    "crates/common",
    "crates/proto",
    "crates/validator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Modern Blockchain Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.1"
blst = "0.3"
rand = "0.8"

# Storage
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }

# Networking
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"

# WASM
wasmer = "4.2"
wasmer-compiler-cranelift = "4.2"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"
criterion = "0.5"
