[package]
name = "blockchain-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blockchain-common = { path = "../common" }
blockchain-proto = { path = "../proto" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
blst = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
