[package]
name = "blockchain-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blockchain-common = { path = "../common" }
blockchain-storage = { path = "../storage" }

serde = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
lru = "0.12"

[dev-dependencies]
tempfile = "3.8"
