[package]
name = "blockchain-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blockchain-common = { path = "../common" }

serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rocksdb = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
